force-app/main/default/objects/Operations_Request__c/Operations_Request__c.object-meta.xml
<CustomObject>
    <label>Operations Request</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Operations Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>