force-app/main/default/objects/Operations_Request__c/fields/Account_ETM_Theatre__c.field-meta.xml
<CustomField>
    <fullName>Account_ETM_Theatre__c</fullName>
    <description>For use in Email template</description>
    <formula>Account_Name__r.ETM_Theatre__c</formula>
    <inlineHelpText>Account ETM Theatre</inlineHelpText>
    <label>Account ETM Theatre</label>
    <type>Text</type>
</CustomField>