force-app/main/default/objects/Operations_Request__c/fields/Account_Move_Reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Move_Reason__c</fullName>
    <description>SAL26-323 Field is to get the account move reason from Admin Queue screen</description>
    <label>Account Move Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DNA (Do Not Assign)</fullName>
            </value>
            <value>
                <fullName>Channel Reassignment</fullName>
            </value>
            <value>
                <fullName>Optimization within RD</fullName>
            </value>
            <value>
                <fullName>Optimization within RVP</fullName>
            </value>
            <value>
                <fullName>Placeholder Correction</fullName>
            </value>
            <value>
                <fullName>Segment Creation</fullName>
            </value>
            <value>
                <fullName>Segment Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>