force-app/main/default/objects/Operations_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account Name</inlineHelpText>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Operations Requests</relationshipLabel>
    <relationshipName>Operations_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>