force-app/main/default/objects/Operations_Request__c/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <description>For email template</description>
    <formula>TEXT(Account_Name__r.Account_Tier__c)</formula>
    <inlineHelpText>Account Tier</inlineHelpText>
    <label>Account Tier</label>
    <type>Text</type>
</CustomField>