force-app/main/default/objects/Operations_Request__c/fields/Account_Transfer_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Transfer_Approval_Status__c</fullName>
    <inlineHelpText>Assigned by field ops on current progress of Account Transfer Request (Pending, Rejected, Approved)</inlineHelpText>
    <label>Account Transfer Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>