force-app/main/default/objects/Operations_Request__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Fetches related Account Type SAL26-1303</description>
    <formula>TEXT(Account_Name__r.Type)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>