force-app/main/default/objects/Operations_Request__c/fields/Asset_Entitlement_Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Entitlement_Transfer_Type__c</fullName>
    <label>Asset/Entitlement Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parent/Child alignment</fullName>
            </value>
            <value>
                <fullName>MSP/End User alignment</fullName>
            </value>
            <value>
                <fullName>Acquisition (signed document needed)</fullName>
            </value>
            <value>
                <fullName>Internal Error</fullName>
            </value>
            <value>
                <fullName>Customer Error</fullName>
            </value>
            <value>
                <fullName>Separate RSC alignment</fullName>
            </value>
            <value>
                <fullName>Other (provide details in Submitter Notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>