force-app/main/default/objects/Operations_Request__c/fields/Assigned_to__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Field Ops user assigned to request. (Internal use only)</inlineHelpText>
    <label>Assigned to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Operations_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>