force-app/main/default/objects/Operations_Request__c/fields/Contact_Id_1__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL24-648</description>
    <inlineHelpText>Contact to merge</inlineHelpText>
    <label>Contact Id 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Operations Requests</relationshipLabel>
    <relationshipName>Operations_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>