force-app/main/default/objects/Operations_Request__c/fields/Contact_Id_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL24-648</description>
    <inlineHelpText>Contact to merge</inlineHelpText>
    <label>Contact Id 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Operations Requests (Contact Id 2)</relationshipLabel>
    <relationshipName>Operations_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>