force-app/main/default/objects/Operations_Request__c/fields/Current_account_owner__c.field-meta.xml
<CustomField>
    <fullName>Current_account_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Current account owner</inlineHelpText>
    <label>Current account owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Operations_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>