force-app/main/default/objects/Operations_Request__c/fields/Current_Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_Owner_Email__c</fullName>
    <formula>Current_account_owner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Account Owner Email</label>
    <type>Text</type>
</CustomField>