force-app/main/default/objects/Operations_Request__c/fields/Current_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is only for use in the approval process and backend</description>
    <inlineHelpText>Current Account Owner Manager (Internal use only)</inlineHelpText>
    <label>Current Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Operations_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>