force-app/main/default/objects/Operations_Request__c/fields/Duplicate_Account__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL24-648</description>
    <inlineHelpText>Link to duplicate account that needs to merge</inlineHelpText>
    <label>Duplicate Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Operations Requests (Duplicate Account)</relationshipLabel>
    <relationshipName>Operations_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>