force-app/main/default/objects/Operations_Request__c/fields/Entitlements_to_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Entitlements_to_Transfer__c</fullName>
    <inlineHelpText>Entitlements designated by sales team to transfer to new Account</inlineHelpText>
    <label>Entitlements to Transfer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>