force-app/main/default/objects/Operations_Request__c/fields/Future_Account__c.field-meta.xml
<CustomField>
    <fullName>Future_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account that the Entitlements are requested to transfer to</inlineHelpText>
    <label>Future Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Operations Requests (Future Account)</relationshipLabel>
    <relationshipName>Operations_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>