force-app/main/default/objects/Operations_Request__c/fields/Future_account_owner__c.field-meta.xml
<CustomField>
    <fullName>Future_account_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account will transfer to this User</inlineHelpText>
    <label>Future account owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Operations_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>