force-app/main/default/objects/Operations_Request__c/fields/Future_Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Future_Account_Owner_Email__c</fullName>
    <formula>Future_account_owner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Email of Future Account Owner</inlineHelpText>
    <label>Future Account Owner Email</label>
    <type>Text</type>
</CustomField>