force-app/main/default/objects/Operations_Request__c/fields/Future_owner_manager__c.field-meta.xml
<CustomField>
    <fullName>Future_owner_manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Only for use in approval process</description>
    <inlineHelpText>Account Owner Manager of User the account is transferring to</inlineHelpText>
    <label>Future owner manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Operations_Requests4</relationshipName>
    <type>Lookup</type>
</CustomField>