force-app/main/default/objects/Operations_Request__c/fields/Is_ETM_Stage_Job_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_ETM_Stage_Job_Created__c</fullName>
    <description>SAL26-323 : This field is created to capture if the ETM job is created or not once the operation request is approved.</description>
    <label>Is ETM Stage Job Created?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>