force-app/main/default/objects/Operations_Request__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <inlineHelpText>Cannot be changed. Close the ticket and create a new one if there was an error or change.</inlineHelpText>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Transfer</fullName>
            </value>
            <value>
                <fullName>Entitlement/Asset Transfer</fullName>
            </value>
            <value>
                <fullName>Account name</fullName>
                <isActive>false</isActive>
                <label>Account name</label>
            </value>
            <value>
                <fullName>Address update</fullName>
                <isActive>false</isActive>
                <label>Address update</label>
            </value>
            <value>
                <fullName>Annual revenue</fullName>
                <isActive>false</isActive>
                <label>Annual revenue</label>
            </value>
            <value>
                <fullName>Contact merge</fullName>
                <isActive>false</isActive>
                <label>Contact merge</label>
            </value>
            <value>
                <fullName>DUNS update</fullName>
                <isActive>false</isActive>
                <label>DUNS update</label>
            </value>
            <value>
                <fullName>Duplicate — Duplicate Account ID</fullName>
                <isActive>false</isActive>
                <label>Duplicate — Duplicate Account ID</label>
            </value>
            <value>
                <fullName>Hierarchy update — Parent Account ID</fullName>
                <isActive>false</isActive>
                <label>Hierarchy update — Parent Account ID</label>
            </value>
            <value>
                <fullName>Industry</fullName>
                <isActive>false</isActive>
                <label>Industry</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <isActive>false</isActive>
                <label>Others</label>
            </value>
            <value>
                <fullName>Website</fullName>
                <isActive>false</isActive>
                <label>Website</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>