force-app/main/default/objects/Operations_Request__c/fields/Operations_Notes__c.field-meta.xml
<CustomField>
    <fullName>Operations_Notes__c</fullName>
    <description>SAL25-369</description>
    <label>Operations Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>