force-app/main/default/objects/Operations_Request__c/fields/Related_Hierarchy_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Hierarchy_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SAL24-648</description>
    <inlineHelpText>Account in hierarchy that needs to be merged</inlineHelpText>
    <label>Related Hierarchy Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Operations Requests (Related Hierarchy Account)</relationshipLabel>
    <relationshipName>Operations_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>