force-app/main/default/objects/Operations_Request__c/fields/Submitter_Notes__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Notes__c</fullName>
    <description>Describe the issue and task needed, please provide links especially if the request is to merge</description>
    <inlineHelpText>Describe the issue and task needed, please provide links especially if the request is to merge</inlineHelpText>
    <label>Submitter Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>