force-app/main/default/objects/Operations_Request__c/fields/Territory_Structure_Type__c.field-meta.xml
<CustomField>
    <fullName>Territory_Structure_Type__c</fullName>
    <description>SAL26-323 - Field is to get the territory structure type from Admin Queue screen.</description>
    <label>Territory Structure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>PLS SaaS</fullName>
            </value>
            <value>
                <fullName>PLS Cloud</fullName>
            </value>
            <value>
                <fullName>PLS NCD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>