force-app/main/default/objects/Operations_Request__c/fields/Total_Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Total_Open_Opportunities__c</fullName>
    <description>This field stores count of open opportunities SAL26-1303</description>
    <formula>Account_Name__r.Total_Open_Opportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Open Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>