force-app/main/default/objects/Operations_Request__c/fields/X18_Char_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Char_ID__c</fullName>
    <formula>Account_Name__r.X18_Char_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Char ID</label>
    <type>Text</type>
</CustomField>