force-app/main/default/objects/Operations_Request__c/validationRules/Future_Account_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Account_Required</fullName>
    <active>true</active>
    <description>When Issue is “Entitlement/Asset Transfer” then “Future Account” field should be mandatory</description>
    <errorConditionFormula>AND(
ISPICKVAL( Issue__c , &apos;Entitlement/Asset Transfer&apos;) ,
NOT($Setup.ShGl_DisableBusinessLogic__c.Disable_Operation_Request_VRs__c),
OR( ISBLANK( Future_Account__c ), ISNULL( Future_Account__c )
))</errorConditionFormula>
    <errorDisplayField>Future_Account__c</errorDisplayField>
    <errorMessage>Future Account is required when Issue is Entitlement/Asset Transfer</errorMessage>
</ValidationRule>