force-app/main/default/objects/Operations_Request__c/validationRules/Future_Owner_manager_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Owner_manager_required</fullName>
    <active>true</active>
    <description>When Issue =&apos;Account transfer&apos; then the Future account owner should have their manager</description>
    <errorConditionFormula>AND(
        NOT($Setup.ShGl_DisableBusinessLogic__c.Disable_Operation_Request_VRs__c),
        ISPICKVAL( Issue__c , &apos;Account Transfer&apos;) ,
        NOT(ISBLANK(Future_account_owner__c )) ,
        NOT(ISBLANK(Current_account_owner__c )) ,
        ISBLANK( Future_account_owner__r.ManagerId)
    )</errorConditionFormula>
    <errorDisplayField>Future_account_owner__c</errorDisplayField>
    <errorMessage>This Future account owner&apos;s manager doesn&apos;t exist, You can&apos;t create an Admin queue with this Future account owner.</errorMessage>
</ValidationRule>