force-app/main/default/objects/Operations_Request__c/listViews/Salesdataops_List.listView-meta.xml
<ListView>
    <fullName>Salesdataops_List</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Issue__c</columns>
    <columns>NAME</columns>
    <columns>Assigned_to__c</columns>
    <columns>Account_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Account_ETM_Theatre__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Issue__c</field>
        <operation>equals</operation>
        <value>,Annual revenue,Contact merge,Duplicate — Duplicate Account ID,Hierarchy update — Parent Account ID,Others,Account name,Address update,DUNS update,Industry,Website</value>
    </filters>
    <filters>
        <field>Assigned_to__c</field>
        <operation>contains</operation>
        <value>,Nisha M,Sangeeth</value>
    </filters>
    <label>Salesdataops List</label>
</ListView>